# cli-smart

./: .gitignore  LICENSE  QUICKSTART.md  README.md  create_release.sh  demo.py  env.example  install.sh  install_ai.sh  main.py  publish.sh  pyproject.toml  requirements.txt  setup.py  setup_homebrew.sh  test_bot.py
Formula/: ai-bot-agent.rb
ai_bot_agent/: __init__.py
homebrew-tap/: README.md
