[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bot-agent"
version = "1.1.0"
description = "🤖 AI Bot Agent - Intelligent command line assistant with chat, code generation, file analysis, and web search capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Thien Nguyen", email = "thien.nguyen@check24.de"}
]
maintainers = [
    {name = "Thien Nguyen", email = "thien.nguyen@check24.de"}
]
keywords = ["ai", "cli", "openai", "chatbot", "assistant", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/thiennp/cli-smart"
Documentation = "https://github.com/thiennp/cli-smart#readme"
Repository = "https://github.com/thiennp/cli-smart"
"Bug Tracker" = "https://github.com/thiennp/cli-smart/issues"
"Changelog" = "https://github.com/thiennp/cli-smart/blob/main/README.md#version-history"

[project.scripts]
ai-bot = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "__pycache__*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 